# ResearchChain

./: .gitignore
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/tests/: basic.rs
frontend/src/: App.vue
frontend/src/components/: HashDemo.vue
server/: db.json  index.js  package.json
