[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[lib]
name = "contracts"
path = "src/lib.rs"

[dependencies]
# ← ローカルにクローンした linera-protocol の SDK を使う
linera-sdk = { path = "../../linera-protocol/linera-sdk" }

# ユーティリティ（ハッシュやシリアライズに後で使う）
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
